--- a/preprocessing/S3d_Jeffries_HBAging_pySCENIC_pipeline.ipynb
+++ b/preprocessing/S3d_Jeffries_HBAging_pySCENIC_pipeline.ipynb
@@ -622,10 +622,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "6e37efd8-25c5-4d89-ba08-03be0dfeb501",
+   "cell_type": "markdown",
+   "id": "3e1dcba0-03dd-4d67-857b-450d2b77aeac",
    "metadata": {},
    "source": [
+    "```\n",
     "start = datetime.now(pytz.timezone('Europe/Paris'))\n",
     "print(\"Start time:\", start.strftime(\"%H:%M:%S\"))\n",
     "\n",
@@ -644,7 +645,8 @@
     "print(\"End time:\", end.strftime(\"%H:%M:%S\"))\n",
     "print(\"Running time:\", (end - start))\n",
     "\n",
-    "# Note: Takes ~50mn with n_workers=12, threads_per_worker=8 => With reduced matrix to overlapping genes between .feather file and our matrix"
+    "# Note: Takes ~50mn with n_workers=12, threads_per_worker=8 => With reduced matrix to overlapping genes between .feather file and our matrix\n",
+    "```"
    ]
   },
   {
@@ -1639,7 +1641,9 @@
       "2025-11-21 09:31:15,234 - pyscenic.utils - INFO - Calculating Pearson correlations.\n",
       "\n",
       "2025-11-21 09:31:17,447 - pyscenic.utils - WARNING - Note on correlation calculation: the default behaviour for calculating the correlations has changed after pySCENIC verion 0.9.16. Previously, the default was to calculate the correlation between a TF and target gene using only cells with non-zero expression values (mask_dropouts=True). The current default is now to use all cells to match the behavior of the R verision of SCENIC. The original settings can be retained by setting 'rho_mask_dropouts=True' in the modules_from_adjacencies function, or '--mask_dropouts' from the CLI.\n",
-      "\tDropout masking is currently set to [True].\n"
+      "\tDropout masking is currently set to [True].\n",
+      "\n",
+      "2025-11-21 09:57:26,935 - pyscenic.utils - INFO - Creating modules.\n"
      ]
     }
    ],
