Update Linnarsson gitignore rules

--- a/preprocessing/S3d_Jeffries_HBAging_pySCENIC_pipeline.ipynb
+++ b/preprocessing/S3d_Jeffries_HBAging_pySCENIC_pipeline.ipynb
@@ -1113,7 +1113,7 @@
     "print(\"End time:\", end.strftime(\"%H:%M:%S\"))\n",
     "print(\"Running time:\", (end - start))\n",
     "\n",
-    "# Note: Takes ~2h38 with n_workers=24, threads_per_worker=1"
+    "# Note: Takes ~2h03 with n_workers=24, threads_per_worker=1"
    ]
   },
   {
@@ -1684,7 +1684,7 @@
     "print(\"End time:\", end.strftime(\"%H:%M:%S\"))\n",
     "print(\"Running time:\", (end - start))\n",
     "\n",
-    "# Note: Takes ~48mn with n_workers=24, threads_per_worker=1. BUT USES ALL 112 cores!!"
+    "# Note: Takes ~37mn with n_workers=24, threads_per_worker=1. BUT USES ALL 112 cores!!"
    ]
   },
   {
@@ -1953,7 +1953,7 @@
     "print(\"End time:\", end.strftime(\"%H:%M:%S\"))\n",
     "print(\"Running time:\", (end - start))\n",
     "\n",
-    "# Note: Takes ~40mn with n_workers=24, threads_per_worker=1."
+    "# Note: Takes ~30mn with n_workers=24, threads_per_worker=1."
    ]
   },
   {
@@ -2387,7 +2387,7 @@
     "print(\"End time:\", end.strftime(\"%H:%M:%S\"))\n",
     "print(\"Running time:\", (end - start))\n",
     "\n",
-    "# Note: Takes ~12mn with n_workers=24, threads_per_worker=1."
+    "# Note: Takes ~11mn with n_workers=24, threads_per_worker=1."
    ]
   },
   {
@@ -2668,7 +2668,7 @@
     "print(\"End time:\", end.strftime(\"%H:%M:%S\"))\n",
     "print(\"Running time:\", (end - start))\n",
     "\n",
-    "# Note: Takes ~1h13 with n_workers=24, threads_per_worker=1."
+    "# Note: Takes ~57mn with n_workers=24, threads_per_worker=1."
    ]
   },
   {
@@ -3136,7 +3136,7 @@
     "print(\"End time:\", end.strftime(\"%H:%M:%S\"))\n",
     "print(\"Running time:\", (end - start))\n",
     "\n",
-    "# Note: 08h40mn46 with num_workers=32"
+    "# Note: 08h40mn46 with num_workers=32 # Note: Takes ~57mn with n_workers=24, threads_per_worker=1."
    ]
   },
   {
